--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           cache: 'npm'
 
       - name: Install frontend dependencies
-        run: npm ci --prefix frontend
+        run: npm install
 
       - name: Build frontend
         run: npm run build --prefix frontend
