--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm install
 
       - name: Build frontend
-        run: npm run build --prefix frontend
+        run: npm run build 
 
       - name: Run frontend tests
-        run: npm test --prefix frontend
+        run: npm test
