Various BUG-FIXES

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,17 @@ name: Frontend CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.8.0]
+        node-version: [20]
 
     steps:
       - name: Checkout repository
@@ -23,7 +22,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install frontend dependencies
         run: npm install
