--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "install": "npm install",
+    "dev": "vite",
     "build": "vite build",
-    "run": "npm run dev",
+    "install": "npm install",
     "preview": "vite preview"
-    
+
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
